Actualizando server para imagenes
